# nexus

./: .gitignore  .in  AUTHORS  CMakeLists.txt  CapillaryNotes.txt  ChangeLog  Dockerfile  Makefile.am  NEWS  README  SConstruct  SConstruct.example  TODO  autogen.sh  configure.ac  example.card  nexus.cc  nexus_setup.py  nexus_setup.sh  process_data.py  running_nexus.sh  shell.nix  square_fiber.py  test.config.mac  version.cpp  version.h  vis.mac
base/: AlongStepRandomGenerator.cc  AlongStepRandomGenerator.h  BaseGeometry.h  BoxVertexGenerator.cc  BoxVertexGenerator.h  ConfigService.cc  ConfigService.h  CylinderVertexGenerator.cc  CylinderVertexGenerator.h  DetectorConstruction.cc  DetectorConstruction.h  HexagonPositioner.cc  HexagonPositioner.h  InputManager.cc  InputManager.h  IonizationHit.cc  IonizationHit.h  IonizationSD.cc  IonizationSD.h  Makefile.am  MaterialsList.cc  MaterialsList.h  NexusFactory.cc  NexusFactory.h  ParamStore.cc  PmtHit.cc  PmtHit.h  PmtSD.cc  PmtSD.h  PrimaryGeneration.cc  PrimaryGeneration.h  SphereVertexGenerator.cc  SphereVertexGenerator.h  TrackingHit.cc  TrackingHit.h  TrackingSD.cc  TrackingSD.h  Utils.cc  Utils.h  event.cc  (+22 more)
next/: Makefile.am
nexus/: Makefile.am
source/: CMakeLists.txt  nexus-test.cc  nexus.cc
source/actions/: AllSteppingAction.cc  AllSteppingAction.h  AnalysisEventAction.cc  AnalysisEventAction.h  AnalysisSteppingAction.cc  AnalysisSteppingAction.h  AnalysisTrackingAction.cc  AnalysisTrackingAction.h  CMakeLists.txt  DefaultActions.config  DefaultEventAction.cc  DefaultEventAction.h  DefaultRunAction.cc  DefaultRunAction.h  DefaultStackingAction.cc  DefaultStackingAction.h  DefaultSteppingAction.cc  DefaultSteppingAction.h  DefaultTrackingAction.cc  DefaultTrackingAction.h  ELSimEventAction.cc  ELSimEventAction.h  ELTablesTrackingAction.cc  ELTablesTrackingAction.h  FastSimEventAction.cc  FastSimEventAction.h  FastSimFiltersEventAction.cc  FastSimFiltersEventAction.h  GeantinoSteppingAction.cc  GeantinoSteppingAction.h  LightTableTrackingAction.cc  LightTableTrackingAction.h  LowMemoryTrackingAction.cc  LowMemoryTrackingAction.h  MikelTrackingAction.cc  MikelTrackingAction.h  MuonsEventAction.cc  MuonsEventAction.h  NoSaveEventAction.cc  NoSaveEventAction.h  (+8 more)
source/base/: ActionsFactory.cc  ActionsFactory.h  BaseDriftField.h  BasePersistencyManager.h  BatchSession.cc  BatchSession.h  ConfigService.cc  ConfigService.h  DetectorConstruction.cc  DetectorConstruction.h  FactoryBase.h  GeneratorFactory.cc  GeneratorFactory.h  GeometryFactory.cc  GeometryFactory.h  HDF5Writer.cc  HDF5Writer.h  IonizationHit.cc  IonizationHit.h  IonizationSD.cc  IonizationSD.h  NexusApp.cc  NexusApp.h  NexusExceptionHandler.cc  NexusExceptionHandler.h  NexusFactory.cc  NexusFactory.h  NexusFactoryMessenger.cc  NexusFactoryMessenger.h  ParamStore.cc  ParamStore.h  PersistencyManager.cc  PersistencyManager.h  PmtHit.cc  PmtHit.h  PmtSD.cc  PrimaryGeneration.cc  PrimaryGeneration.h  Trajectory.cc  Trajectory.h  (+8 more)
source/generators/: AddUserInfoToPV.cc  AddUserInfoToPV.h  Back2backGammas.cc  Back2backGammas.h  CORSIKAGenerator.cc  CORSIKAGenerator.h  Decay0Interface.cc  Decay0Interface.h  DoubleParticle.cc  DoubleParticle.h  ECECGenerator.cc  ECECGenerator.h  ELLookupTableGenerator.cc  ELLookupTableGenerator.h  ELTableGenerator.cc  ELTableGenerator.h  ElecPositronPair.cc  ElecPositronPair.h  ElecPositronPairGenerator.cc  ElecPositronPairGenerator.h  GenbbInterface.cc  GenbbInterface.config  GenbbInterface.h  IonGenerator.cc  IonGenerator.h  IonGun.cc  IonGun.h  Kr83mGeneration.cc  Kr83mGeneration.h  Kr83mGenerator.cc  Kr83mGenerator.h  LED450LW.cc  LED450LW.h  LED450LWcone.cc  LED450LWcone.h  LXeScintillationGenerator.cc  LXeScintillationGenerator.h  LambertianGenerator.cc  LambertianGenerator.h  MuonAngleGenerator.cc  (+29 more)
source/geometries/: BaseGeometry.h  BlackBox.cc  BlackBox.h  BlackBoxDEMO.cc  BlackBoxDEMO.h  BlackBoxNEW1_5.cc  BlackBoxNEW1_5.h  BlackBoxNEW23_5.cc  BlackBoxNEW23_5.h  BlackBoxNEW25.cc  BlackBoxNEW25.h  BlackBoxNEW26_5.cc  BlackBoxNEW26_5.h  BlackBoxNEW28.cc  BlackBoxNEW28.h  BlackBoxNEW31.cc  BlackBoxNEW31.h  BlackBoxNEW38_5.cc  BlackBoxNEW38_5.h  BlackBoxNEW3_5.cc  BlackBoxNEW3_5.h  BlackBoxNEW46.cc  BlackBoxNEW46.h  BlackBoxNEW53_5.cc  BlackBoxNEW53_5.h  BlackBoxNew.cc  BlackBoxNew.h  BlackBoxNew1_5.cc  BlackBoxNew1_5.h  BlackBoxNew23_5.cc  BlackBoxNew23_5.h  BlackBoxNew25.cc  BlackBoxNew25.h  BlackBoxNew26_5.cc  BlackBoxNew26_5.h  BlackBoxNew28.cc  BlackBoxNew28.h  BlackBoxNew31.cc  BlackBoxNew31.h  BlackBoxNew38_5.cc  (+330 more)
source/materials/: ArgonGasProperties.cc  ArgonGasProperties.h  HeliumGasProperties.cc  HeliumGasProperties.h  MaterialProperties.cc  MaterialProperties.h  MaterialsList.cc  MaterialsList.h  OpticalMaterialProperties.cc  OpticalMaterialProperties.h  SellmeierEquation.h  XenonGasProperties.cc  XenonGasProperties.h  XenonLiquidProperties.cc  XenonLiquidProperties.h  XenonProperties.cc  XenonProperties.h
source/persistency/: HDF5Writer.cc  HDF5Writer.h  PersistencyManager.cc  PersistencyManager.h  PersistencyManagerBase.h  hdf5_functions.cc  hdf5_functions.h
source/physics/: BaseDriftField.h  DriftTrackInfo.h  ELLookupTable.cc  ELLookupTable.h  ELParamSimulation.cc  ELParamSimulation.h  Electroluminescence.cc  Electroluminescence.h  IonizationCluster.cc  IonizationCluster.h  IonizationClustering.cc  IonizationClustering.h  IonizationDrift.cc  IonizationDrift.h  IonizationElectron.cc  IonizationElectron.h  OpPhotoelectricEffect.cc  OpPhotoelectricEffect.h  RadiusDependentDriftField.cc  RadiusDependentDriftField.h  UniformElectricDriftField.cc  UniformElectricDriftField.h  WavelengthShifting.cc  WavelengthShifting.h
source/physics_lists/: DefaultPhysicsList.cc  DefaultPhysicsList.h  LivermoreEMPhysics.cc  LivermoreEMPhysics.h  NexusPhysics.cc  NexusPhysics.h  NexusPhysicsList.cc  NexusPhysicsList.h  NexusStepLimiterBuilder.cc  NexusStepLimiterBuilder.h  OpticalPhysics.cc  OpticalPhysics.h  StandardEMPhysics.cc  StandardEMPhysics.h
source/sensdet/: IonizationHit.cc  IonizationHit.h  IonizationSD.cc  PmtHit.cc  (+10 more)
(+992 files in other folders)
