pkginclude_HEADERS = 

SUBDIRS = nexus base physics generator geometry manager applications

SUBLIBS = physics/libPhysics.la \
	  base/libBase.la \
	  generator/libGenerator.la \
	  manager/libActions.la \
	  geometry/libGeometry.la

EXTRA_DIST = autogen.sh configure.ac version.cpp version.h

CLEANFILES = *~* 
