noinst_LTLIBRARIES = libBase.la

pkginclude_HEADERS = event.hh \
		     generator.hh \
		     run.hh \
		     stepping.hh \
		     stepping_verbose.hh \
		     tracking.hh \
		     stacking.hh

EXTRA_DIST =

libBase_la_SOURCES = event.cc \
			      generator.cc \
			      run.cc \
			      stepping.cc \
			      stepping_verbose.cc \
			      tracking.cc \
			      stacking.cc

CLEANFILES = *~* 


